<resources>
    <string name="app_name">LogicUniversityApp</string>
    <string name="adjTitle">Item Details</string>
    <string name="adjCode">Item Number:</string>
    <string name="adjDesc">Description:</string>
    <string name="adjUOM">UOM:</string>
    <string name="adjCurQty">Current Qty:</string>
    <string name="adjQty">Adjustment Qty:</string>
    <string name="adjReason">Reason:</string>
    <string name="adjButton">Submit</string>
    <string name="adjPendingRemoval">Pending Adj Qty (remove):</string>
    <!--Tharrani Start-->
    <string name="Searchhint">Search by description</string>
    <string name="Search">Description</string>
    <string name="item1_value">Logout</string>
    <string name="customdialogtitle">Edit Cart Item</string>
    <!--Tharrani End-->
    <!--Joel Start-->
    <string name="collectionList">Warehouse Collection List</string>
    <string name="CollectionItem">Collection Item Details</string>
    <string name="reason">Enter adjustment reason</string>
    <string name="collectQtyTooBig">Enter smaller qty prepared</string>
    <string name="adjQtyTooBig">Reduce prepared or adjustment qty</string>
    <string name="adjEditText">0</string>
    <string name="sorting">Item Sorting</string>
    <string name="noCollect">No items to collect</string>
    <string name="readyForCollect">Ready for Collection</string>
    <string name="selectDate">Please select collection date</string>
    <string name="noSort">No departments to sort</string>
    <string name="reallocateTooMuch">Reduce total reallocation qty</string>
    <string name="enterNumber">Enter number only</string>
    <string name="notZero">Number cant be negative</string>
    <string name="noSortForThisDpt">Please collect items for this department first</string>
    <!--Joel End-->

</resources>
