<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClerkAdjustmentForm">

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="143dp"
        android:layout_marginStart="144dp"
        android:layout_marginTop="16dp"
        android:text="@string/adjTitle"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/adjTitle" />

    <TextView
        android:id="@+id/tvADJcode"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="56dp"
        android:layout_marginTop="68dp"
        android:text="@string/adjCode"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvAdjDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="68dp"
        android:layout_marginTop="16dp"
        android:text="@string/adjDesc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvADJcode" />

    <TextView
        android:id="@+id/tvAdjUOM"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="109dp"
        android:layout_marginTop="27dp"
        android:text="@string/adjUOM"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAdjDescription" />

    <TextView
        android:id="@+id/tvAdjCurrQty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="69dp"
        android:layout_marginTop="29dp"
        android:text="@string/adjCurQty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAdjUOM" />

    <TextView
        android:id="@+id/tvAdjQty"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="56dp"
        android:text="@string/adjQty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAdjCurrQty" />

    <TextView
        android:id="@+id/tvAdjCodeValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="164dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="28dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvADJcode"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/tvAdjDescValue"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="164dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="16dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvAdjDescription"
        app:layout_constraintTop_toBottomOf="@+id/tvAdjCodeValue" />

    <TextView
        android:id="@+id/tvAdjUOMvalue"
        android:layout_width="150dp"
        android:layout_height="16dp"
        android:layout_marginEnd="164dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="24dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/tvAdjUOM"
        app:layout_constraintTop_toBottomOf="@+id/tvAdjDescValue" />

    <TextView
        android:id="@+id/tvAdjCurrQtyValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="164dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="28dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvAdjCurrQty"
        app:layout_constraintTop_toBottomOf="@+id/tvAdjUOMvalue" />

    <TextView
        android:id="@+id/tvAdjReason"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="92dp"
        android:layout_marginTop="40dp"
        android:text="@string/adjReason"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAdjQty" />

    <Button
        android:id="@+id/buttonAdjSubmit"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:layout_marginEnd="149dp"
        android:layout_marginStart="147dp"
        android:text="@string/adjButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tvPendingRemoval"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/adjPendingRemoval"
        android:textAlignment="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAdjCurrQty" />

    <TextView
        android:id="@+id/tvAdjRemoveQtyValue"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="164dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="19dp"
        android:text="TextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvPendingRemoval"
        app:layout_constraintTop_toBottomOf="@+id/tvAdjCurrQtyValue" />

    <EditText
        android:id="@+id/editTextAdjQty"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginEnd="7dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="19dp"
        android:ems="10"
        android:inputType="number|numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvAdjQty"
        app:layout_constraintTop_toBottomOf="@+id/tvAdjRemoveQtyValue" />

    <EditText
        android:id="@+id/editTextReason"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="7dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvAdjReason"
        app:layout_constraintTop_toBottomOf="@+id/editTextAdjQty" />


</android.support.constraint.ConstraintLayout>