<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f8fdf8"
    android:focusable="true"
    android:focusableInTouchMode="true"
    tools:context=".Clerk_WeeklyCollectionListDetailActivity">


    <TextView
        android:id="@+id/textView_CollectionItemTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#98c442"
        android:paddingBottom="5dp"
        android:paddingTop="5dp"
        android:text="@string/CollectionItem"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView_ColItem_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="8dp"
        android:text="Description:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_CollectionItemTitle" />

    <TextView
        android:id="@+id/textView_ColItem_description1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="130dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_CollectionItemTitle" />


    <TextView
        android:id="@+id/textView_ColItem_ItemNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:text="Item Number:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_ColItem_description1" />

    <TextView
        android:id="@+id/textView_ColItem_ItemNum1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="130dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_ColItem_description1" />


    <TextView
        android:id="@+id/textView_ColItem_uom"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:text="UOM:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_ColItem_ItemNum" />

    <TextView
        android:id="@+id/textView_ColItem_uom1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="130dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_ColItem_ItemNum1" />


    <TextView
        android:id="@+id/textView_ColItem_availableQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:text="Current Qty:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_ColItem_uom" />

    <TextView
        android:id="@+id/textView_ColItem_availableQty1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="130dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_ColItem_uom1" />


    <TextView
        android:id="@+id/textView_ColItem_orderQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="15dp"
        android:text="Ordered Qty:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_ColItem_availableQty" />

    <TextView
        android:id="@+id/textView_ColItem_orderQty1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="130dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.765"
        app:layout_constraintStart_toEndOf="@+id/textView_ColItem_orderQty"
        app:layout_constraintTop_toBottomOf="@+id/textView_ColItem_availableQty1" />


    <TextView
        android:id="@+id/textView_ColItem_collectQty"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="Collect Qty:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_ColItem_orderQty" />

    <EditText
        android:id="@+id/editText_ColItem_collectQty1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="130dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="10dp"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_ColItem_orderQty1" />


    <TextView
        android:id="@+id/textView_ColItem_pendingAdjRemove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="Pending Adj Qty:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_ColItem_collectQty" />

    <TextView
        android:id="@+id/textView_ColItem_pendingAdjRemove1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="130dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_ColItem_collectQty1" />


    <TextView
        android:id="@+id/textView_ColItem_adjQty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="20dp"
        android:text="Qty Adjusted"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_ColItem_pendingAdjRemove" />

    <EditText
        android:id="@+id/editText_ColItem_adjQty1"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="130dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="10dp"
        android:hint="@string/adjEditText"
        android:inputType="number|numberSigned"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_ColItem_pendingAdjRemove1" />


    <TextView
        android:id="@+id/textView_reason"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="28dp"
        android:text="Reason:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_ColItem_adjQty" />

    <EditText
        android:id="@+id/editText_reason"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="130dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="10dp"
        android:hint="@string/reason"
        android:maxLength="299"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_ColItem_adjQty1" />


    <Button
        android:id="@+id/button_prepare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:background="@android:color/holo_green_dark"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="15dp"
        android:text="Collect"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_cancel"
        app:layout_constraintTop_toBottomOf="@+id/editText_reason" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:background="#da9191"
        android:paddingBottom="15dp"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:paddingTop="15dp"
        android:text="Cancel"
        android:textColor="@android:color/background_light"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_prepare"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_reason" />


</android.support.constraint.ConstraintLayout>